# bracket_ratatui

./: Cargo.toml  README.md
examples/: hello_cdda.rs
examples/demo/: bracket.rs  main.rs
src/: bracket_backend.rs  lib.rs
